Got get remotes call to work and to add available remotes to home page with linking to remote page

--- a/src/main/resources/client/public/remote.html
+++ b/src/main/resources/client/public/remote.html
@@ -2,13 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>multiremote</title>
+    <title>remote</title>
     <script src="index.js"></script>
 </head>
 <body>
-    <h3>
-        multiremote
-    </h3>
-    <div id="remotes"></div>
 </body>
 </html>
