--- a/src/main/resources/client/public/index.html
+++ b/src/main/resources/client/public/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>multiremote</title>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
     <h3>
