Created RemoteService, removed possible null pointer exception from ApacheHttpService, added timeout handling if RokuDiscovery takes too long, tested on tv roku and currently works

--- a/src/main/resources/client/public/index.html
+++ b/src/main/resources/client/public/index.html
@@ -11,5 +11,6 @@
         multiremote
     </h3>
     <div id="remotes"></div>
+    <div onclick="redirectService.redirect('/?rescan=true')">Rescan</div>
 </body>
 </html>
