Added bulma to project and added some styling to remote

--- a/src/main/resources/client/public/index.html
+++ b/src/main/resources/client/public/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>multiremote</title>
     <script src="index.js"></script>
+    <link rel="stylesheet" href="bulma.css">
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
