Changed format of index and remote

--- a/src/main/resources/client/public/index.html
+++ b/src/main/resources/client/public/index.html
@@ -18,9 +18,9 @@
                 <div class="column">
                     <div id="remotes"></div>
                 </div>
-                <div class="column">
-                    <a href="/?rescan=true">Rescan</a>
-                </div>
+            </div>
+            <div>
+                <a href="/?rescan=true">Rescan</a>
             </div>
         </div>
     </div>
