--- a/src/main/resources/client/public/remote.html
+++ b/src/main/resources/client/public/remote.html
@@ -15,8 +15,8 @@
         </div>
         <div class="message-body">
             <div class="columns">
-                <div class="column is-two-thirds">
-                    <div class="remote">
+                <div class="column is-half">
+                    <div class="remote box">
                         <div class="columns">
                             <div class="column"><a class="button is-fullwidth" onclick="remoteCommandService.back()">Back</a></div>
                             <div class="column"><a class="button is-fullwidth" onclick="remoteCommandService.info()">Info</a></div>
@@ -55,9 +55,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="column">
-                    <a href="/">Back Home</a>
-                </div>
+            </div>
+            <div>
+                <a href="/">Back Home</a>
             </div>
         </div>
     </div>
